// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legacy Content - Peer - Guidelines Badge Component should NOT display failing label when passingGuidelines is true 1`] = `
<pf-guidelines-badge
  guidelinesService={[Function DojGuidelinesStub]}
>
  
</pf-guidelines-badge>
`;

exports[`Legacy Content - Peer - Guidelines Badge Component should display failing label when passingGuidelines is false 1`] = `
<pf-guidelines-badge
  guidelinesService={[Function DojGuidelinesStub]}
>
  <div
    class="guidelines-label failing"
    popovertitle="Guidelines"
    triggers="mouseenter:mouseleave"
  >
    <i
      class="fas fa-exclamation-circle"
    />
  </div>
</pf-guidelines-badge>
`;
